include application.conf in local packaging.